升级hibernate 3.6.0 其其他小修改